Bug 1192304 - Common up the checks when entering GC API; r=jonco